fix Cột môn học text-align: left;

--- a/6551071022_BTTKWEB_5/Styles/style.css
+++ b/6551071022_BTTKWEB_5/Styles/style.css
@@ -17,3 +17,7 @@
     border-collapse: collapse;
     border-color: orange;
 }
+
+.text {
+    text-align: left;
+}
